ghc-4335c07/testsuite/tests/overloadedrecflds/should_fail/T11167_ambiguous_fixity_B.hs
module T11167_ambiguous_fixity_B where
data B = MkB { foo :: Int -> Int }
infixl 5 `foo`
